syntax = "proto3";

 package books;

 service BooksController {
   rpc FindAll (Empty) returns (AllBooksResponse) {}
   rpc FindOne (BookById) returns (Book) {}
   rpc Create (CreateBookDTO) returns (Book) {}
   rpc Update (UpdateBookDTO) returns (Book) {}
   rpc Delete (BookById) returns (Empty) {}
 }

 message BookById {
   int32 id = 1;
 }

 message Book {
   int32 id = 1;
   int32 authorId = 2;
   string title = 3;
   string description = 4;
 }

message BookWithAuthor {
    int32 id = 1;
    int32 authorId = 2;
    string title = 3;
    string description = 4;
    string authorFirstName = 5;
    string authorLastName = 6;
 }

message AllBooksResponse {
  repeated BookWithAuthor books = 1;
}

message CreateBookDTO {
   int32 id = 1;
   int32 authorId = 2;
   string title = 3;
   string description = 4;
}

message UpdateBookDTO {
   int32 id = 1;
   optional int32 authorId = 2;
   optional string title = 3;
   optional string description = 4;
}

message Empty {}
